# coppuccino

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: another_example.ipynb  example.ipynb  galactic_binary_example.ipynb  hdr_8d_example.ipynb  hdr_credibility.ipynb  hdr_example.ipynb  hdr_uncertainty_example.ipynb  requirements.txt
examples/data/: LDC0005312031_injections.feather  LDC0005312031_posterior.feather  LDC0006773451_injections.feather  LDC0006773451_posterior.feather  LDC0009146021_injections.feather  LDC0009146021_posterior.feather  LDC2A_00000000_injections.feather  LDC2A_00000000_posterior.feather  LDC2A_00000007_posterior.feather
src/coppuccino/: __init__.py  bijections.py  copula_flows.py  hdr.py  model_io.py
tests/: test_bijections.py  test_copula_flows.py  test_hdr.py  test_model_io.py
