[project]
name = "coppuccino"
version = "0.1.0"
description = "Fit distributions with normalizing flows + copulas with JAX"
authors = [
    {name = "Aaron D. Johnson",email = "aaron9035@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "jax (>=0.7.2,<0.8.0)",
    "jaxlib (>=0.7.2,<0.8.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "scipy (>=1.11.0)",
    "equinox (>=0.13.2,<0.14.0)",
    "interpax (>=0.3.11,<0.4.0)",
    "flowjax (>=17.2.1,<18.0.0)",
    "cloudpickle (>=3.0.0)"
]

[tool.poetry]
packages = [{include = "coppuccino", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
