[project]
name = "coppuccino"
version = "1.0.0"
description = "Fit distributions with normalizing flows + copulas with JAX"
authors = [
    {name = "Aaron D. Johnson", email = "aaron9035@gmail.com"}
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11,<4.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "jax>=0.4.38,<0.8.0",
    "jaxlib>=0.4.38,<0.8.0",
    "numpy>=1.26,<3.0.0",
    "scipy>=1.10",
    "equinox>=0.13.2,<0.14.0",
    "interpax>=0.3.11,<0.4.0",
    "flowjax>=17.2.1,<18.0.0",
    # flowjax 17.2.1 leaves jaxtyping uncapped, but jaxtyping >=0.3.6 tightened
    # runtime shape checking in a way that breaks flowjax's dimension contracts.
    "jaxtyping>=0.3.4,<0.3.6",
    "paramax>=0.0.3",
    "cloudpickle>=2.2.1,<4.0.0",
]

[project.urls]
Homepage = "https://github.com/AaronDJohnson/coppuccino"
Repository = "https://github.com/AaronDJohnson/coppuccino"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coppuccino"]

[dependency-groups]
dev = ["pytest>=7.0"]
