[project]
name = "coppuccino"
version = "1.0.0"
description = "Fit distributions with normalizing flows + copulas with JAX"
authors = [
    {name = "Aaron D. Johnson", email = "aaron9035@gmail.com"}
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11,<4.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    # jaxlib 0.7.x ships cp311-cp314 wheels so a single version spans every
    # supported Python including 3.14. (jax 0.10 was observed to trip a
    # BatchTracer error in the flow on Python 3.11.) The 3.12+ `issubclass`
    # typing failure is handled by the jaxtyping>=0.3.6 floor below.
    "jax>=0.4.38,<0.8",
    "jaxlib>=0.4.38,<0.8",
    "numpy>=1.26,<3.0.0",
    # scipy only shipped cp312 wheels from 1.11.x, so the oldest installable
    # version differs by Python (older scipy would build from source on 3.12).
    "scipy>=1.10; python_version < '3.12'",
    "scipy>=1.11.3; python_version >= '3.12'",
    "equinox>=0.13.2,<0.14.0",
    "interpax>=0.3.11,<0.4.0",
    "flowjax>=17.2.1,<18.0.0",
    # jaxtyping >=0.3.6 carries the Python 3.12 `issubclass` typing fix.
    "jaxtyping>=0.3.6,<0.4.0",
    "paramax>=0.0.3",
    "cloudpickle>=2.2.1,<4.0.0",
]

[project.urls]
Homepage = "https://github.com/AaronDJohnson/coppuccino"
Repository = "https://github.com/AaronDJohnson/coppuccino"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coppuccino"]

[dependency-groups]
dev = ["pytest>=7.0"]
